--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ckeditor/ckeditor5-build-classic": "^12.4.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "express": "^4.17.1",
+    "moment": "^2.24.0",
     "path": "^0.12.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
