--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ckeditor/ckeditor5-angular": "^1.1.0",
     "@ckeditor/ckeditor5-build-classic": "^12.4.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.0",
+    "ckeditor-cloudinary-uploader-adapter": "^1.1.3",
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "path": "^0.12.7",
